Fixing some spacing

--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@ h3 {
 .about-pic {
   margin-bottom: 10px;
   border-radius: 100%;
-  width: 65%;
+  width: 60%;
   margin-left: 7vw;
   border: 3px solid #ac6195;
   box-shadow: 3px 3px 3px gray;
